--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,24 @@
-/* Reset default styles */
 :root {
   --curr-color: #1e90ff;
 }
 
+body {
+  font-family: "Poppins";
+}
+
+h2 {
+  color: #515151;
+  font-weight: 400;
+  font-style: italic;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+a {
+  color: #1e90ff;
+}
+
 * {
-  font-family: Arial, sans-serif;
+  font-family: "Poppins";
   max-width: 800px;
   margin: 0px auto;
   line-height: 1.8;
@@ -14,7 +28,6 @@
 .container {
   max-width: 800px;
   margin: 2rem auto;
-  font-family: Arial, sans-serif;
 }
 
 #vis svg {
